# Django-Blog-Application

./: .env  .env.example  .gitignore  Readme.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: .env  .env.example  Makefile  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini
backend/blog/: admin.py  models.py  serializers.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py  0002_alter_post_title.py
backend/blog/tests/: test_comment.py  test_posts.py  test_register.py
backend/blogapi/: settings.py  urls.py
backend/nginx/: default.conf
frontend/: Dockerfile
frontend/src/: App.js  api.js
frontend/src/components/: CreatePost.js  LoginForm.js  PostList.js
k8s/: deployment.yml  ingress.yml  secrets.yml  service.yml
nginx/: default.conf
